feat(crawler): add cache to RulesEngine