@@ -4,8 +4,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
-import java.net.URL;
-
+import java.net.URI;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -15,7 +14,8 @@ public class RobotsFetcher {
     public byte[] fetch(String url) {
         HttpURLConnection conn;
         try {
-            conn = (HttpURLConnection) new URL(url).openConnection();
+            URI uri = new URI(url);
+            conn = (HttpURLConnection) uri.toURL().openConnection();
             conn.setRequestMethod("GET");
             conn.setConnectTimeout(5000);
             conn.setReadTimeout(5000);
@@ -29,6 +29,8 @@ public class RobotsFetcher {
             log.error("Invalid URL for robots.txt: {}", url);
         } catch (IOException e) {
             log.error("Error fetching robots.txt from {}: {}", url, e.getMessage());
+        } catch (Exception e) {
+            log.error("Unexpected error fetching robots.txt from {}: {}", url, e.getMessage());
         }
 
         return new byte[0];
